--- a/css/foundation.css
+++ b/css/foundation.css
@@ -6819,7 +6819,7 @@ input:hover {
   margin-top: 4%;
   margin-bottom: 4%;
   background: transparent;
-  border: transparent;
+  border: #9B30FF;
   font-family: 'Montserrat', sans-serif;
   table-layout: fixed;
   width: 100%;
@@ -6840,4 +6840,15 @@ input:hover {
   height: 1.5rem;
   padding: 1.5rem;
   line-height: 1.5rem;
+}
+
+.another-one input {
+  margin-top: 30px;
+  margin-bottom: 16px;
+}
+
+.ul-notes ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
